# BKWB

./: FRONTEND.md
desktop-app/staff/: .gitignore  ARCHITECTURE.md  BILLS_AND_PAYMENTS_PAGES.md  CHANGELOG.md  DEVELOPMENT_CHECKLIST.md  ELECTRON_DESKTOP_APP.md  FEATURES.md  FIXES_APPLIED.md  GET_STARTED.md  IMPLEMENTATION_SUMMARY.md  LOGOUT_FEATURE.md  MESSAGES_PAGE.md  METER_READINGS_PAGE.md  PROFILE_SETTINGS_PAGE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REPORTS_PAGE.md  RESIDENTS_PAGE.md  SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
desktop-app/staff/electron/: main.js
desktop-app/staff/src/: App.tsx  index.css
desktop-app/staff/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/staff/src/components/: AnnouncementsPanel.tsx  ConversationCard.tsx  CreateTicketModal.tsx  Header.tsx  LogoutModal.tsx  MessageBubble.tsx  MeterReadingsTable.tsx  ProfileSummaryCard.tsx  RevenueChart.tsx  Sidebar.tsx  StatCard.tsx  (+1 more)
desktop-app/super-admin/: .gitignore  ADD_USER_MODAL.md  ANALYTICS_PAGE.md  AUDIT_LOGS_COMPLETE_IMPLEMENTATION.md  AUDIT_LOGS_CONSOLE.md  AUDIT_LOGS_PAGE.md  EXPORT_REPORT_MODAL.md  README.md  SUPER_ADMIN_COMPLETE.md  SUPER_ADMIN_DASHBOARD.md  SYSTEM_SETTINGS_PAGE.md  USERS_PAGE.md  index.html  package-lock.json  package.json  vite.config.ts
desktop-app/super-admin/src/: App.tsx
desktop-app/super-admin/src-tauri/: Cargo.toml  tauri.conf.json
mobile-app/meterReader/: app.json  package-lock.json  package.json  tailwind.config.js
mobile-app/residents/: app.json  package-lock.json  package.json  tailwind.config.js
(+78 files in other folders)
